<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/sign_in"
        android:textColor="@color/Black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:background="@color/Transparent"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/Orange"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/fields_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_user"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/DimOrange"
                app:cardCornerRadius="@dimen/_3sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/email" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true">

                        <EditText
                            android:id="@+id/sign_in_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/DimOrange"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:paddingStart="@dimen/_3sdp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/DimOrange"
                app:cardCornerRadius="@dimen/_3sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/lock" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/sign_in_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/DimOrange"
                            android:hint="@string/pass"
                            android:inputType="textPassword"
                            android:paddingStart="@dimen/_5sdp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fields_layout"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/forgot_pass"
            android:textColor="@color/GreyBrown"
            android:textSize="@dimen/_15sdp"
            android:textStyle="italic|bold" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@id/forgot_pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/Orange"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/White" />
    </RelativeLayout>


</RelativeLayout>