<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    tools:context=".Activity.SubscriptionActivity">

    <EditText
        android:id="@+id/tablet_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/tablet_id" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/paypal_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:gravity="center"
                android:minWidth="@dimen/_50sdp"
                android:minHeight="@dimen/_50sdp"
                android:src="@drawable/paypal"
                android:text="545"
                android:textColor="@color/Charcoal"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/paypal"
                android:textAllCaps="false"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/credit_card_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:gravity="center"
                android:minWidth="@dimen/_50sdp"
                android:minHeight="@dimen/_50sdp"
                android:src="@drawable/visa_card"
                android:text="545"
                android:textColor="@color/Charcoal"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/credit_card"
                android:textAllCaps="false"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>