<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".Activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/register"
            android:textColor="@color/Black"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_45sdp">

            <TextView
                android:id="@+id/already_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Transparent"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/Orange"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/fields_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/already_user"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/DimOrange"
                        app:cardCornerRadius="@dimen/_3sdp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:focusableInTouchMode="true">

                            <EditText
                                android:id="@+id/f_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:backgroundTint="@color/DimPurple"
                                android:hint="@string/f_name"
                                android:inputType="textPersonName"
                                android:paddingStart="@dimen/_5sdp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/DimOrange"
                        app:cardCornerRadius="@dimen/_3sdp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:focusableInTouchMode="true">

                            <EditText
                                android:id="@+id/l_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:backgroundTint="@color/DimPurple"
                                android:hint="@string/l_name"
                                android:inputType="textPersonName"
                                android:paddingStart="@dimen/_5sdp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/DimOrange"
                    app:cardCornerRadius="@dimen/_3sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/email"
                            android:tint="@color/GreyBrown" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:focusableInTouchMode="true">

                            <EditText
                                android:id="@+id/sign_up_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/DimPurple"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:paddingStart="@dimen/_3sdp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/DimOrange"
                    app:cardCornerRadius="@dimen/_3sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/lock"
                            android:tint="@color/GreyBrown" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/sign_up_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/DimPurple"
                                android:hint="@string/pass"
                                android:inputType="textPassword"
                                android:paddingStart="@dimen/_3sdp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/DimOrange"
                    app:cardCornerRadius="@dimen/_3sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/lock"
                            android:tint="@color/GreyBrown" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:gravity="center_vertical"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/cnfm_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/DimPurple"
                                android:hint="@string/confirm_pass"
                                android:inputType="textPassword"
                                android:paddingStart="@dimen/_3sdp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <Button
                android:id="@+id/create"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_below="@id/fields_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/Orange"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>