<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SettingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/email"
            android:tint="@color/Charcoal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/setting_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DimPurple"
                android:paddingStart="@dimen/_3sdp"
                android:textColor="@color/Charcoal"
                android:textSize="@dimen/_15sdp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_15sdp"
        android:backgroundTint="@color/Orange"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/White" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/subscribe"
            android:tint="@color/Charcoal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DimPurple"
                android:paddingStart="@dimen/_3sdp"
                android:text="@string/subscribe"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/connection"
            android:tint="@color/Charcoal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/connect_tablet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DimPurple"
                android:paddingStart="@dimen/_3sdp"
                android:text="@string/tablet_connect"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/lock"
            android:tint="@color/Charcoal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DimPurple"
                android:paddingStart="@dimen/_3sdp"
                android:text="@string/change_pass"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/signout"
            android:tint="@color/Charcoal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DimPurple"
                android:paddingStart="@dimen/_3sdp"
                android:text="@string/sign_out"
                android:textColor="@color/Black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>